--- a/dj_utils/locale/pl/LC_MESSAGES/django.po
+++ b/dj_utils/locale/pl/LC_MESSAGES/django.po
@@ -3,12 +3,11 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-11-24 23:42+0200\n"
+"POT-Creation-Date: 2014-11-25 13:26+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -63,7 +62,7 @@ msgstr ""
 
 #: .\dj_utils\validators.py:18
 #, python-format
-msgid "Email з доменом %s заборонений."
+msgid "Email with domain \"%s\" is disallowed."
 msgstr ""
 
 #: .\dj_utils\validators.py:23
