Fix tojson template filter. Update version to 0.1.73

--- a/install.txt
+++ b/install.txt
@@ -18,3 +18,8 @@ Install pngquant on debian
 Install jpegtran on debian
 ==========================
 # aptitude install libjpeg-progs
+
+
+Install ImageMagic
+==================
+# aptitude install imagemagick
